Add match statement